hphp/test/slow/lang/inst_meth_accessibility.php.expectf
private: created in C

Fatal error: Failure to resolve method name 'private_meth' in %s/inst_meth_accessibility.php on line 19
